fix: hide scrollbar

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,6 +34,15 @@
   left: 0;
   top: 0;
   overflow: auto;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.mainContent::-webkit-scrollbar {
+  display: none;
+  width: 0px;
+  background: transparent;
 }
 
 .contentWrapper {
